fix: imports organised
build(cli): target Java 17 runtime

Compile the CLI for Java 17 and replace virtual-thread execution with a fixed thread pool so the CLI and extension can run wherever the core library supports.